<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>daybreak_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="henry@lunar-glass.com">henrylec</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>swerve_drive_controller</exec_depend>
  <exec_depend>drive_action_interfaces</exec_depend>
  <exec_depend>drive_action_servers</exec_depend>
  <exec_depend>behaviortree_ros2</exec_depend>
  <exec_depend>roborio_bridge</exec_depend>
  <exec_depend>daybreak_robot_coordinator</exec_depend>
  <exec_depend>daybreak_robotbt_actions</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>